aligned divs correctly
floated one and two left so they were placed next to each other and the
third floated to the right

--- a/07LessonSeven/in-class-project/css/my-style.css
+++ b/07LessonSeven/in-class-project/css/my-style.css
@@ -8,28 +8,33 @@ header {
   width: 850px;
   height: 450px;
   background-position:center;
+  color: white;
+  text-align: center;
 }
 
-main{
-    background-color: gray;
+main {
+    background-color: lightgray;
     width: 850px;
-    height: 364px;
+    height: 324px;
 }
 
 .one {
-  width:270px;
-  height:364px;
+  margin:10px;
+  width:260px;
+  height:324px;
   float: left;
 }
 
 .two {
-  width:270px;
-  height:364px;
-  float:inherit;
+  margin:10px;
+  width:260px;
+  height:324px;
+  float:left;
 }
 
 .three {
-  width: 270px;
-  height: 364px;
+  margin:10px;
+  width: 260px;
+  height:364px;
   float: right;
 }
